# metricdrive

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: research_task.md
.github/workflows/: ci.yml  pages.yml
docs/: data_policy.md  experiment_log.md  github_metadata.md  index.html  recruiting_packet.md  related_work.md  research_spec.md  roadmap.md
docs/demo/: README.md  app.js  index.html  scenarios.json  styles.css
docs/examples/: README.md  vlm_planning_examples.jsonl
docs/releases/: v0.1.0.md
docs/reports/: milestone_1.md  milestone_2.md  milestone_3.md  milestone_3_ablation_study.md  milestone_3_hard_negatives.md  milestone_3_learned_model.md  portfolio_report.md
src/metricdrive/: __init__.py  benchmark.py  cli.py  demo.py  demo_site.py  hard_negatives.py  io.py  learning.py  meta_actions.py  metrics.py  planners.py  preferences.py  report.py  rl_alignment.py  samples.py  scenario.py  visualize.py  vlm_examples.py
tests/: test_benchmark.py  test_cli.py  test_demo.py  test_demo_site.py  test_hard_negatives.py  test_io.py  test_learning.py  test_planners.py  test_preferences.py  test_report.py  test_rl_alignment.py  test_samples.py  test_visualize.py  test_vlm_examples.py
