[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "metricdrive"
version = "0.1.0"
description = "Metric-derived preference alignment experiments for autonomous-driving trajectory planning."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Ethan Villalovoz" }
]
license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]
dev = []

[project.scripts]
metricdrive = "metricdrive.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
